--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@xstate/react": "^6.0.0",
+    "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.15.2",
     "prosemirror-commands": "^1.7.1",
     "prosemirror-example-setup": "^1.2.3",
     "prosemirror-history": "^1.5.0",
@@ -23,6 +25,7 @@
     "prosemirror-view": "^1.41.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-input-emoji": "^5.9.0",
     "react-router-dom": "^7.9.6",
     "xstate": "^5.24.0"
   },
